tests/ui/async-await/in-trait/async-recursive-generic.stderr
error[E0733]: recursion in an `async fn` requires boxing
  --> $DIR/async-recursive-generic.rs:11:48
   |
LL |     async fn foo_recursive(&self, n: usize) -> T {
   |                                                ^ recursive `async fn`
   |
   = note: a recursive `async fn` must be rewritten to return a boxed `dyn Future`
   = note: consider using the `async_recursion` crate: https://crates.io/crates/async_recursion

error: aborting due to previous error

For more information about this error, try `rustc --explain E0733`.
